Added image to website

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 	<title>Test for Github for GITHUB MINI COURSE </title>
 </head>
 <body>
+	<img src="Han So Hee.jfif" />
 	<h2>Welcome to myWebSite</h2>
 </body>
